--- a/src/main/resources/templates/guest/input.html
+++ b/src/main/resources/templates/guest/input.html
@@ -69,7 +69,7 @@
                     }
                     if (res.code == 200) {
                         $('#im').val(res.data[0].url);
-                        return layer.alert('上传成功！');
+                        return layer.msg('上传成功！');
                     }
                     //上传成功
                 }
