--- a/src/main/resources/templates/exhibitioninfo/input2.html
+++ b/src/main/resources/templates/exhibitioninfo/input2.html
@@ -77,7 +77,7 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">虚拟展厅html地址</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{halurl}" lay-verify="required"  autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{halurl}" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item" th:if="*{id != null}">
@@ -97,6 +97,8 @@
                         </div>
                     </div>
                     <input th:field="*{id}" type="hidden"/>
+                    <input th:field="*{businesslicense}" type="hidden"/>
+                    <input th:field="*{credentials}" type="hidden"/>
                     <button lay-submit lay-filter="submitFrom" style="display: none;">提交</button>
                 </form>
             </div>
