--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -37,6 +37,7 @@
                         <dd><a href="javascript:;" menuid="200" menuurl='<iframe src="/platform/czrInfo/list" width="100%" height="1080px;" frameborder="0"></iframe>'>专业观众</a></dd>
                         <dd><a href="javascript:;" menuid="201" menuurl='<iframe src="/platform/zsInfo/list" width="100%" height="1080px;" frameborder="0"></iframe>'>参展商</a></dd>
                         <dd><a href="javascript:;" menuid="202" menuurl='<iframe src="/platform/guest/list" width="100%" height="1080px;" frameborder="0"></iframe>'>专业嘉宾</a></dd>
+                        <dd><a href="javascript:;" menuid="203" menuurl='<iframe src="/platform/visitpre/list" width="100%" height="1080px;" frameborder="0"></iframe>'>参展预登记</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
