--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -81,8 +81,8 @@
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;" menuid="800" menuurl='<iframe src="/platform/live/list" width="100%" height="1080px;" frameborder="0"></iframe>'>直播管理</a></dd>
                         <dd><a href="javascript:;" menuid="801" menuurl='<iframe src="/platform/stationinfo/list" width="100%" height="1080px;" frameborder="0"></iframe>'>站内信管理</a></dd>
-<!--                        <dd><a href="javascript:;" menuid="802" menuurl='<iframe src="/platform/problem/list" width="100%" height="1080px;" frameborder="0"></iframe>'>精彩图集上传</a></dd>-->
-                        <!--                        <dd><a href="javascript:;" menuid="802" menuurl='<iframe src="/platform/problem/list" width="100%" height="1080px;" frameborder="0"></iframe>'>蜂鸟地图管理</a></dd>-->
+                        <dd><a href="javascript:;" menuid="802" menuurl='<iframe src="/platform/video/list" width="100%" height="1080px;" frameborder="0"></iframe>'>精彩视频上传</a></dd>
+                        <!--                        <dd><a href="javascript:;" menuid="803" menuurl='<iframe src="/platform/problem/list" width="100%" height="1080px;" frameborder="0"></iframe>'>蜂鸟地图管理</a></dd>-->
 
                     </dl>
                 </li>
