--- a/src/main/resources/static/HTML/css/style.css
+++ b/src/main/resources/static/HTML/css/style.css
@@ -114,7 +114,7 @@
 	-webkit-box-orient: vertical;
 }
 .g_niches-list ul li a .g_newslist-browse{position: absolute; left: 2.25rem; bottom: 0.1rem;}
-
+.g_nothing{text-align: center; font-size: 0.28rem; color: #333; padding: 0.3rem;}
 
 
 /*我的商机详情*/
