--- a/src/main/resources/templates/video/input.html
+++ b/src/main/resources/templates/video/input.html
@@ -9,7 +9,7 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">标题</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{title}" required  lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{title}" required  lay-verify="required" placeholder="标题" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
@@ -40,7 +40,7 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">排序</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{sort}" required  lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{sort}" required  lay-verify="required" placeholder="排序" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <input th:field="*{id}" type="hidden"/>
