--- a/src/main/resources/templates/exhibitioninfo/input2.html
+++ b/src/main/resources/templates/exhibitioninfo/input2.html
@@ -5,11 +5,11 @@
     <div class="layui-container">
         <div class="layui-row" style="margin-top: 10px;">
             <div class="layui-col-xs12 layui-col-sm12 layui-col-md12">
-                <form class="layui-form" th:object="${ehbExhibitor}">
+                <form class="layui-form" th:object="${exhibitorVo}">
                     <div class="layui-form-item">
                         <label class="layui-form-label">注册手机</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{phone}" lay-verify="required"  autocomplete="off" class="layui-input" maxlength="11">
+                            <input type="text" th:field="*{registerphone}" lay-verify="required"  autocomplete="off" class="layui-input" maxlength="11">
                         </div>
                     </div>
                     <div class="layui-form-item">
@@ -22,6 +22,12 @@
                         <label class="layui-form-label">管理人员</label>
                         <div class="layui-input-block">
                             <input type="text" th:field="*{name}" lay-verify="required"  autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">管理人手机</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{phone}" lay-verify="required"  autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
@@ -42,7 +48,7 @@
                             <input type="text" th:field="*{enterprisename}" lay-verify="required" autocomplete="off" class="layui-input">
                         </div>
                     </div>
-                    <div th:if="${ehbExhibitor.id != null}">
+                    <div th:if="${exhibitorVo.id != null}">
                         <div class="layui-form-item">
                             <label class="layui-form-label">企业logo</label>
                             <div class="layui-input-block">
@@ -69,7 +75,7 @@
                         </div>
                     </div>
                     <div class="layui-form-item">
-                        <label class="layui-form-label">蜂鸟云地图Fid</label>
+                        <label class="layui-form-label">蜂鸟云Fid</label>
                         <div class="layui-input-block">
                             <input type="text" th:field="*{fid}" lay-verify="required"  autocomplete="off" class="layui-input">
                         </div>
@@ -113,19 +119,39 @@
 
             form.on('submit(submitFrom)', function(data){
                 console.log(JSON.stringify(data.field));
-
-                var phone = data.field.phone;
-                if(!(/^1(3|4|5|6|7|8|9)\d{9}$/.test(phone))){
-                    layer.msg('手机号码有误，请重填！',core.showtime);
+                //注册电话
+                var registerphone = data.field.registerphone;
+                var regphone = /^1[0-9]{10}$/;
+                if(!regphone.test(registerphone)){
+                    layer.msg('注册手机号码有误，请重填！',core.showtime);
                     return false;
                 }
-
+                //邮箱
                 var mailbox = data.field.mailbox;
                 var reg = /^([a-zA-Z]|[0-9])(\w|\-)+@[a-zA-Z0-9]+\.([a-zA-Z]{2,4})$/;
                 if(!reg.test(mailbox)){
                     layer.msg('邮箱有误，请重填！',core.showtime);
                     return false;
                 }
+                //管理者电话
+                var phone = data.field.phone;
+                if(!(/^[1][3,4,5,7,8][0-9]{9}$/.test(phone))){
+                    layer.msg('管理者手机号码有误，请重填！',core.showtime);
+                    return false;
+                }
+                //身份证
+                var idcard = data.field.idcard;
+                if(!(/^[1-9]\d{5}(18|19|20|(3\d))\d{2}((0[1-9])|(1[0-2]))(([0-2][1-9])|10|20|30|31)\d{3}[0-9Xx]$/.test(idcard))){
+                    layer.msg('身份证有误，请重填！',core.showtime);
+                    return false;
+                }
+
+                //座机
+                // var tel = data.field.tel;
+                // if(!(/^[0][1-9]{2,3}-[0-9]{5,10}$/.test(tel))){
+                //     layer.msg('座机有误，请重填！',core.showtime);
+                //     return false;
+                // }
 
                 var resultData = core.ajax('/platform/zsInfo/saveOrUpdate',false,'POST',data.field);
                 if(resultData!=false){
