--- a/src/main/resources/templates/exhibitioninfo/list2.html
+++ b/src/main/resources/templates/exhibitioninfo/list2.html
@@ -14,17 +14,17 @@
                                     <div class="layui-row">
                                         <div class="layui-col-xs4 layui-col-sm4 layui-col-md4">
                                             <div class="layui-form-item">
-                                                <label class="layui-form-label">手机号</label>
+                                                <label class="layui-form-label">注册手机号</label>
                                                 <div class="layui-input-block">
-                                                    <input type="text" name="phone" placeholder="请输入手机号" autocomplete="off" class="layui-input">
+                                                    <input type="text" name="registerphone" placeholder="注册手机号" autocomplete="off" class="layui-input">
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="layui-col-xs3 layui-col-sm3 layui-col-md3">
                                             <div class="layui-form-item">
-                                                <label class="layui-form-label">姓名</label>
+                                                <label class="layui-form-label">管理者姓名</label>
                                                 <div class="layui-input-block">
-                                                    <input type="text" name="name" placeholder="请输入姓名" autocomplete="off" class="layui-input">
+                                                    <input type="text" name="name" placeholder="管理者姓名" autocomplete="off" class="layui-input">
                                                 </div>
                                             </div>
                                         </div>
@@ -97,25 +97,7 @@
         <div id="detail" style="display: none;">
             <form class="layui-form layui-form-pane">
                 <div class="layui-form-item">
-                    <label class="layui-form-label">id</label>
-                    <div class="layui-input-block">
-                        <input type="text" class="layui-input" readonly>
-                    </div>
-                </div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">名称</label>
-                    <div class="layui-input-block">
-                        <input type="text" class="layui-input" readonly>
-                    </div>
-                </div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">电话</label>
-                    <div class="layui-input-block">
-                        <input type="text" class="layui-input" readonly>
-                    </div>
-                </div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">企业</label>
+                    <label class="layui-form-label">注册手机</label>
                     <div class="layui-input-block">
                         <input type="text" class="layui-input" readonly>
                     </div>
@@ -127,19 +109,49 @@
                     </div>
                 </div>
                 <div class="layui-form-item">
+                    <label class="layui-form-label">管理人员</label>
+                    <div class="layui-input-block">
+                        <input type="text" class="layui-input" readonly>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">管理人手机</label>
+                    <div class="layui-input-block">
+                        <input type="text" class="layui-input" readonly>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">身份证</label>
+                    <div class="layui-input-block">
+                        <input type="text" class="layui-input" readonly>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">座机</label>
+                    <div class="layui-input-block">
+                        <input type="text" class="layui-input" readonly>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">企业名称</label>
+                    <div class="layui-input-block">
+                        <input type="text" class="layui-input" readonly>
+                    </div>
+                </div>
+                <div class="layui-form-item">
                     <label class="layui-form-label">展位号</label>
                     <div class="layui-input-block">
                         <input type="text" class="layui-input" readonly>
                     </div>
                 </div>
                 <div class="layui-form-item">
-                    <label class="layui-form-label">fid</label>
+                    <label class="layui-form-label">蜂鸟云Fid</label>
                     <div class="layui-input-block">
                         <input type="text" class="layui-input" readonly>
                     </div>
                 </div>
                 <div class="layui-form-item">
-                    <label class="layui-form-label">虚拟展厅url</label>
+                    <label class="layui-form-label">虚拟展厅html地址</label>
                     <div class="layui-input-block">
                         <input type="text" class="layui-input" readonly>
                     </div>
@@ -161,7 +173,7 @@
         </script>
 
         <script type="text/html" id="rowToolBar">
-<!--            <a class="layui-btn layui-btn-xs" lay-event="detail"><i class="layui-icon layui-icon-form" title="查看"></i></a>-->
+            <a class="layui-btn layui-btn-xs" lay-event="detail"><i class="layui-icon layui-icon-form" title="查看"></i></a>
             <a class="layui-btn layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit" title="审核"></i></a>
 <!--            <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del"><i class="layui-icon layui-icon-delete" title="删除"></i></a>-->
         </script>
