--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -100,7 +100,7 @@
             </ul>
             <div class="layui-tab-content">
                 <div class="layui-tab-item layui-show">
-                    <iframe src="/crmUser/userList" width="100%" height="1080px;" frameborder="0"></iframe>
+                    <iframe src="/platform/index/list" width="100%" height="1080px;" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
