--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -17,7 +17,7 @@
 <body>
     <div class="layui-footer" th:fragment="footer">
         <!-- 底部固定区域 -->
-        © https://www.iteye.com/blog/user/747017186 - 通用系统独立研发
+<!--        © https://www.iteye.com/blog/user/747017186 - 通用系统独立研发-->
     </div>
 </body>
 </html>
