--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -1,288 +1,288 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="common::headr('首页')"></head>
-<meta charset="UTF-8">
-<title>交易分析</title>
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<!--<!DOCTYPE html>-->
+<!--<html xmlns:th="http://www.thymeleaf.org">-->
+<!--<head th:replace="common::headr('首页')"></head>-->
+<!--<meta charset="UTF-8">-->
+<!--<title>交易分析</title>-->
+<!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
 
-<link rel="stylesheet" type="text/css" th:href="@{/static/css/wuye.css}" />
-<script th:src="@{/static/tools/jquery-3.4.1.min.js}" type="text/javascript" charset="utf-8"></script>
-<script th:src="@{/static/tools/echarts.min.js}" type="text/javascript" charset="utf-8"></script>
-<style type="text/css">
-    body {
-        padding: 20px;
-    }
-</style>
+<!--<link rel="stylesheet" type="text/css" th:href="@{/static/css/wuye.css}" />-->
+<!--<script th:src="@{/static/tools/jquery-3.4.1.min.js}" type="text/javascript" charset="utf-8"></script>-->
+<!--<script th:src="@{/static/tools/echarts.min.js}" type="text/javascript" charset="utf-8"></script>-->
+<!--<style type="text/css">-->
+<!--    body {-->
+<!--        padding: 20px;-->
+<!--    }-->
+<!--</style>-->
 
-<body id="pc">
-<h1 class="com-title">物业数据统计</h1>
-<div class="carts midcarts five">
-    <div class="item">
-        <div class="rt">
-            <p>物业总量</p>
-            <span class="num">3</span>
-        </div>
-    </div>
-    <div class="item">
-        <div class="rt">
-            <p>总退单量</p>
-            <span class="num">4</span>
-        </div>
-    </div>
-    <div class="item">
-        <div class="rt">
-            <p>前置仓总量</p>
-            <span class="num">3</span>
-        </div>
-    </div>
-    <div class="item">
-        <div class="rt">
-            <p>物业用户总量</p>
-            <span class="num">344</span>
-        </div>
-    </div>
+<!--<body id="pc">-->
+<!--<h1 class="com-title">参展商数据统计</h1>-->
+<!--<div class="carts midcarts five">-->
+<!--    <div class="item">-->
+<!--        <div class="rt">-->
+<!--            <p>认证参展商数量</p>-->
+<!--            <span class="num">3</span>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="item">-->
+<!--        <div class="rt">-->
+<!--            <p>总退单量</p>-->
+<!--            <span class="num">4</span>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="item">-->
+<!--        <div class="rt">-->
+<!--            <p>前置仓总量</p>-->
+<!--            <span class="num">3</span>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="item">-->
+<!--        <div class="rt">-->
+<!--            <p>物业用户总量</p>-->
+<!--            <span class="num">344</span>-->
+<!--        </div>-->
+<!--    </div>-->
 
-    <div class="item">
-        <div class="rt">
-            <p>总交易额</p>
-            <span class="num">￥2342243</span>
-        </div>
-    </div>
-</div>
-<h1 class="com-title">物业佣金数据统计</h1>
-<div class="carts midcarts three">
-    <div class="item">
-        <div class="rt">
-            <p>物业总佣金</p>
-            <span class="num">￥2342243</span>
-        </div>
-    </div>
-    <div class="item">
-        <div class="rt">
-            <p>物业总佣金余额</p>
-            <span class="num">￥2342243</span>
-        </div>
-    </div>
-    <div class="item">
-        <div class="rt">
-            <p>物业已提现佣金</p>
-            <span class="num">￥2342243</span>
-        </div>
-    </div>
+<!--    <div class="item">-->
+<!--        <div class="rt">-->
+<!--            <p>总交易额</p>-->
+<!--            <span class="num">￥2342243</span>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--<h1 class="com-title">物业佣金数据统计</h1>-->
+<!--<div class="carts midcarts three">-->
+<!--    <div class="item">-->
+<!--        <div class="rt">-->
+<!--            <p>物业总佣金</p>-->
+<!--            <span class="num">￥2342243</span>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="item">-->
+<!--        <div class="rt">-->
+<!--            <p>物业总佣金余额</p>-->
+<!--            <span class="num">￥2342243</span>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="item">-->
+<!--        <div class="rt">-->
+<!--            <p>物业已提现佣金</p>-->
+<!--            <span class="num">￥2342243</span>-->
+<!--        </div>-->
+<!--    </div>-->
 
-</div>
-<!--柱状图-->
-<h1 class="com-title">柱状图
-    <div class="select-boxs">
-        <a href="javascript:void(0)" class="active">全部</a>
-        <select name="">
-            <option value="">请选择省</option>
-            <option value="1">北京</option>
-            <option value="2">上海</option>
-        </select>
-        <select name="">
-            <option value="">请选择市</option>
-            <option value="1">北京</option>
-            <option value="2">上海</option>
-        </select>
-        <select name="">
-            <option value="">请选择区</option>
-            <option value="1">北京</option>
-            <option value="2">上海</option>
-        </select>
-    </div>
-</h1>
-<div class="onecomm-echarts-box">
-    <div class="g_expenditure-echarts" id="sbl-rate"></div>
-</div>
-<!--饼状图-->
-<h1 class="com-title">饼状图
-    <div class="select-boxs">
-        <a href="javascript:void(0)" class="active">全部</a>
-        <select name="">
-            <option value="">请选择省</option>
-            <option value="1">北京</option>
-            <option value="2">上海</option>
-        </select>
-        <select name="">
-            <option value="">请选择市</option>
-            <option value="1">北京</option>
-            <option value="2">上海</option>
-        </select>
-        <select name="">
-            <option value="">请选择区</option>
-            <option value="1">北京</option>
-            <option value="2">上海</option>
-        </select>
-    </div>
-</h1>
-<div class="onecomm-echarts-box">
-    <div class="g_expenditure-echarts" id="cake"></div>
-</div>
-<!--折线图-->
-<h1 class="com-title">折线图
-    <div class="select-boxs">
-        <a href="javascript:void(0)" class="active">全部</a>
-        <select name="">
-            <option value="">请选择省</option>
-            <option value="1">北京</option>
-            <option value="2">上海</option>
-        </select>
-        <select name="">
-            <option value="">请选择市</option>
-            <option value="1">北京</option>
-            <option value="2">上海</option>
-        </select>
-        <select name="">
-            <option value="">请选择区</option>
-            <option value="1">北京</option>
-            <option value="2">上海</option>
-        </select>
-    </div>
-</h1>
-<div class="onecomm-echarts-box">
-    <div class="g_expenditure-echarts" id="line"></div>
-</div>
+<!--</div>-->
+<!--&lt;!&ndash;柱状图&ndash;&gt;-->
+<!--<h1 class="com-title">柱状图-->
+<!--    <div class="select-boxs">-->
+<!--        <a href="javascript:void(0)" class="active">全部</a>-->
+<!--        <select name="">-->
+<!--            <option value="">请选择省</option>-->
+<!--            <option value="1">北京</option>-->
+<!--            <option value="2">上海</option>-->
+<!--        </select>-->
+<!--        <select name="">-->
+<!--            <option value="">请选择市</option>-->
+<!--            <option value="1">北京</option>-->
+<!--            <option value="2">上海</option>-->
+<!--        </select>-->
+<!--        <select name="">-->
+<!--            <option value="">请选择区</option>-->
+<!--            <option value="1">北京</option>-->
+<!--            <option value="2">上海</option>-->
+<!--        </select>-->
+<!--    </div>-->
+<!--</h1>-->
+<!--<div class="onecomm-echarts-box">-->
+<!--    <div class="g_expenditure-echarts" id="sbl-rate"></div>-->
+<!--</div>-->
+<!--&lt;!&ndash;饼状图&ndash;&gt;-->
+<!--<h1 class="com-title">饼状图-->
+<!--    <div class="select-boxs">-->
+<!--        <a href="javascript:void(0)" class="active">全部</a>-->
+<!--        <select name="">-->
+<!--            <option value="">请选择省</option>-->
+<!--            <option value="1">北京</option>-->
+<!--            <option value="2">上海</option>-->
+<!--        </select>-->
+<!--        <select name="">-->
+<!--            <option value="">请选择市</option>-->
+<!--            <option value="1">北京</option>-->
+<!--            <option value="2">上海</option>-->
+<!--        </select>-->
+<!--        <select name="">-->
+<!--            <option value="">请选择区</option>-->
+<!--            <option value="1">北京</option>-->
+<!--            <option value="2">上海</option>-->
+<!--        </select>-->
+<!--    </div>-->
+<!--</h1>-->
+<!--<div class="onecomm-echarts-box">-->
+<!--    <div class="g_expenditure-echarts" id="cake"></div>-->
+<!--</div>-->
+<!--&lt;!&ndash;折线图&ndash;&gt;-->
+<!--<h1 class="com-title">折线图-->
+<!--    <div class="select-boxs">-->
+<!--        <a href="javascript:void(0)" class="active">全部</a>-->
+<!--        <select name="">-->
+<!--            <option value="">请选择省</option>-->
+<!--            <option value="1">北京</option>-->
+<!--            <option value="2">上海</option>-->
+<!--        </select>-->
+<!--        <select name="">-->
+<!--            <option value="">请选择市</option>-->
+<!--            <option value="1">北京</option>-->
+<!--            <option value="2">上海</option>-->
+<!--        </select>-->
+<!--        <select name="">-->
+<!--            <option value="">请选择区</option>-->
+<!--            <option value="1">北京</option>-->
+<!--            <option value="2">上海</option>-->
+<!--        </select>-->
+<!--    </div>-->
+<!--</h1>-->
+<!--<div class="onecomm-echarts-box">-->
+<!--    <div class="g_expenditure-echarts" id="line"></div>-->
+<!--</div>-->
 
-<script type="text/javascript">
-    //柱状图
-    var myshopRateChart = echarts.init(document.getElementById('sbl-rate'));
-    var shopRateoption = {
-        legend: {
+<!--<script type="text/javascript">-->
+<!--    //柱状图-->
+<!--    var myshopRateChart = echarts.init(document.getElementById('sbl-rate'));-->
+<!--    var shopRateoption = {-->
+<!--        legend: {-->
 
-        },
-        color: ["#4286F5", '#84BF42'],
-        tooltip: {
-            trigger: 'axis',
-            axisPointer: { // 坐标轴指示器，坐标轴触发有效
-                type: 'shadow' // 默认为直线，可选为：'line' | 'shadow'
-            }
-        },
-        grid: {
-            left: '3%',
-            right: '4%',
-            bottom: '3%',
-            containLabel: true
-        },
-        xAxis: [{
-            type: 'category',
-            axisLabel: {
-                show: true,
-                color: 'rgb(102,102,102)',
-                fontSize: 12,
-                interval: 0, //隔几个点显示x轴标签
+<!--        },-->
+<!--        color: ["#4286F5", '#84BF42'],-->
+<!--        tooltip: {-->
+<!--            trigger: 'axis',-->
+<!--            axisPointer: { // 坐标轴指示器，坐标轴触发有效-->
+<!--                type: 'shadow' // 默认为直线，可选为：'line' | 'shadow'-->
+<!--            }-->
+<!--        },-->
+<!--        grid: {-->
+<!--            left: '3%',-->
+<!--            right: '4%',-->
+<!--            bottom: '3%',-->
+<!--            containLabel: true-->
+<!--        },-->
+<!--        xAxis: [{-->
+<!--            type: 'category',-->
+<!--            axisLabel: {-->
+<!--                show: true,-->
+<!--                color: 'rgb(102,102,102)',-->
+<!--                fontSize: 12,-->
+<!--                interval: 0, //隔几个点显示x轴标签-->
 
-            },
-            data: ['总量', '北京', '上海', '河北', '内蒙', '山西'],
-            axisTick: {
-                alignWithLabel: true
-            }
-        }],
-        yAxis: [{
-            type: 'value',
-            // name: '万元',
-        }],
-        series: [{
-            name: '用户数',
-            type: 'bar',
-            barWidth: 30, //柱图宽度
-            data: [1000, 200, 556, 334, 390, 330]
-        }, {
-            name: '成交数',
-            type: 'bar',
-            barWidth: 30, //柱图宽度
-            data: [2334, 3434, 3434, 34, 3545, 23]
-        }]
-    };
-    myshopRateChart.setOption(shopRateoption);
+<!--            },-->
+<!--            data: ['总量', '北京', '上海', '河北', '内蒙', '山西'],-->
+<!--            axisTick: {-->
+<!--                alignWithLabel: true-->
+<!--            }-->
+<!--        }],-->
+<!--        yAxis: [{-->
+<!--            type: 'value',-->
+<!--            // name: '万元',-->
+<!--        }],-->
+<!--        series: [{-->
+<!--            name: '用户数',-->
+<!--            type: 'bar',-->
+<!--            barWidth: 30, //柱图宽度-->
+<!--            data: [1000, 200, 556, 334, 390, 330]-->
+<!--        }, {-->
+<!--            name: '成交数',-->
+<!--            type: 'bar',-->
+<!--            barWidth: 30, //柱图宽度-->
+<!--            data: [2334, 3434, 3434, 34, 3545, 23]-->
+<!--        }]-->
+<!--    };-->
+<!--    myshopRateChart.setOption(shopRateoption);-->
 
-    //饼状图
-    var mycakeEcharts = echarts.init(document.getElementById('cake'));
-    var cakeoption = {
-        tooltip: {
-            trigger: 'item',
-            formatter: '{a} <br/>{b} : {c} ({d}%)'
-        },
-        legend: {
-            orient: 'horizontal',
-            algin: 'center',
-            bottom: '0',
-            data: ['男性', '女性']
-        },
+<!--    //饼状图-->
+<!--    var mycakeEcharts = echarts.init(document.getElementById('cake'));-->
+<!--    var cakeoption = {-->
+<!--        tooltip: {-->
+<!--            trigger: 'item',-->
+<!--            formatter: '{a} <br/>{b} : {c} ({d}%)'-->
+<!--        },-->
+<!--        legend: {-->
+<!--            orient: 'horizontal',-->
+<!--            algin: 'center',-->
+<!--            bottom: '0',-->
+<!--            data: ['男性', '女性']-->
+<!--        },-->
 
-        color: ["#0daef2", "#ff808e"],
-        series: [{
-            name: "性别占比",
-            type: 'pie',
+<!--        color: ["#0daef2", "#ff808e"],-->
+<!--        series: [{-->
+<!--            name: "性别占比",-->
+<!--            type: 'pie',-->
 
-            data: [{
-                value: 20,
-                name: '男性'
-            },
-                {
-                    value: 335,
-                    name: '女性'
-                },
+<!--            data: [{-->
+<!--                value: 20,-->
+<!--                name: '男性'-->
+<!--            },-->
+<!--                {-->
+<!--                    value: 335,-->
+<!--                    name: '女性'-->
+<!--                },-->
 
-            ],
+<!--            ],-->
 
-        }]
-    };
-    mycakeEcharts.setOption(cakeoption);
-    //折线图
-    var mylineChart = echarts.init(document.getElementById('line'));
-    var lineoption = {
-        tooltip: {
-            trigger: 'axis'
-        },
-        legend: {
+<!--        }]-->
+<!--    };-->
+<!--    mycakeEcharts.setOption(cakeoption);-->
+<!--    //折线图-->
+<!--    var mylineChart = echarts.init(document.getElementById('line'));-->
+<!--    var lineoption = {-->
+<!--        tooltip: {-->
+<!--            trigger: 'axis'-->
+<!--        },-->
+<!--        legend: {-->
 
-        },
-        color: ["#4286F5", '#84BF42'],
-        xAxis: {
-            type: 'category',
-            boundaryGap: true,
-            axisLabel: {
-                show: true,
-                color: 'rgb(170,170,170)',
-                fontSize: 12,
-                interval: 0, //隔几个点显示x轴标签
+<!--        },-->
+<!--        color: ["#4286F5", '#84BF42'],-->
+<!--        xAxis: {-->
+<!--            type: 'category',-->
+<!--            boundaryGap: true,-->
+<!--            axisLabel: {-->
+<!--                show: true,-->
+<!--                color: 'rgb(170,170,170)',-->
+<!--                fontSize: 12,-->
+<!--                interval: 0, //隔几个点显示x轴标签-->
 
-            },
-            data: ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23', '24']
-        },
-        yAxis: {
-            type: 'value',
-            name: '单位:元'
-        },
-        series: [{
-            name: '订单总金额',
-            lineStyle: {
-                normal: {
-                    color: '#4286F5'
-                }
-            },
-            type: 'line',
-            stack: '总量',
-            data: [1000, 2000, 2000, 2000, 2000, 2000, 2000, 1000, 2000, 2000, 2000, 2000, 2000, 2000, 1000, 2000, 2000, 2000, 2000, 2000, 2000, 4000, 3000, 5000],
+<!--            },-->
+<!--            data: ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23', '24']-->
+<!--        },-->
+<!--        yAxis: {-->
+<!--            type: 'value',-->
+<!--            name: '单位:元'-->
+<!--        },-->
+<!--        series: [{-->
+<!--            name: '订单总金额',-->
+<!--            lineStyle: {-->
+<!--                normal: {-->
+<!--                    color: '#4286F5'-->
+<!--                }-->
+<!--            },-->
+<!--            type: 'line',-->
+<!--            stack: '总量',-->
+<!--            data: [1000, 2000, 2000, 2000, 2000, 2000, 2000, 1000, 2000, 2000, 2000, 2000, 2000, 2000, 1000, 2000, 2000, 2000, 2000, 2000, 2000, 4000, 3000, 5000],-->
 
-        },
-            {
-                name: '付款订单金额',
-                lineStyle: {
-                    normal: {
-                        color: '#84BF42'
-                    }
-                },
-                type: 'line',
-                stack: '总量',
-                data: [1000, 2000, 3434, 4545, 2000, 2000, 45454, 1000, 4545, 2000, 2000, 4545, 2000, 2000, 1000, 2000, 2000, 2000, 2000, 2000, 2000, 4000, 3000, 5000],
+<!--        },-->
+<!--            {-->
+<!--                name: '付款订单金额',-->
+<!--                lineStyle: {-->
+<!--                    normal: {-->
+<!--                        color: '#84BF42'-->
+<!--                    }-->
+<!--                },-->
+<!--                type: 'line',-->
+<!--                stack: '总量',-->
+<!--                data: [1000, 2000, 3434, 4545, 2000, 2000, 45454, 1000, 4545, 2000, 2000, 4545, 2000, 2000, 1000, 2000, 2000, 2000, 2000, 2000, 2000, 4000, 3000, 5000],-->
 
-            }
-        ]
-    };
-    mylineChart.setOption(lineoption);
-</script>
-</body>
+<!--            }-->
+<!--        ]-->
+<!--    };-->
+<!--    mylineChart.setOption(lineoption);-->
+<!--</script>-->
+<!--</body>-->
 
-</html>
+<!--</html>-->
