--- a/src/main/resources/templates/live/input.html
+++ b/src/main/resources/templates/live/input.html
@@ -124,7 +124,7 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">全部禁言</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{forbiddenWords}" placeholder="请输入拉流地址" autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{forbiddenWords}" placeholder="全部禁言" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
@@ -136,7 +136,7 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">禁言成员</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{forbiddenMember}" placeholder="请输入排序" autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{forbiddenMember}" placeholder="禁言成员" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
