--- a/src/main/resources/templates/article/input.html
+++ b/src/main/resources/templates/article/input.html
@@ -82,7 +82,7 @@
                 this.sync();
             },
             items:[
-                '|', 'undo', 'redo', '|', 'preview', 'print', 'cut', 'copy', 'paste',
+                'source','|', 'undo', 'redo', '|', 'preview', 'print', 'cut', 'copy', 'paste',
                 'plainpaste', 'wordpaste', '|', 'justifyleft', 'justifycenter', 'justifyright',
                 'justifyfull', 'insertorderedlist', 'insertunorderedlist', 'indent', 'outdent', 'subscript',
                 'superscript', 'clearhtml', 'quickformat', 'selectall', '|', 'fullscreen', '/',
