--- a/src/main/resources/templates/exhibitioninfo/list.html
+++ b/src/main/resources/templates/exhibitioninfo/list.html
@@ -16,7 +16,7 @@
                                             <div class="layui-form-item">
                                                 <label class="layui-form-label">手机号</label>
                                                 <div class="layui-input-block">
-                                                    <input type="text" name="id" placeholder="请输入手机号" autocomplete="off" class="layui-input">
+                                                    <input type="text" name="phone" placeholder="请输入手机号" autocomplete="off" class="layui-input">
                                                 </div>
                                             </div>
                                         </div>
