--- a/src/main/resources/templates/visitpre/list.html
+++ b/src/main/resources/templates/visitpre/list.html
@@ -16,7 +16,7 @@
                                             <div class="layui-form-item">
                                                 <label class="layui-form-label">登记人姓名</label>
                                                 <div class="layui-input-block">
-                                                    <input type="text" name="id" placeholder="登记人姓名" autocomplete="off" class="layui-input">
+                                                    <input type="text" name="name" placeholder="登记人姓名" autocomplete="off" class="layui-input">
                                                 </div>
                                             </div>
                                         </div>
