--- a/src/main/resources/templates/exhibitioninfo/input2.html
+++ b/src/main/resources/templates/exhibitioninfo/input2.html
@@ -105,6 +105,7 @@
                     <input th:field="*{id}" type="hidden"/>
                     <input th:field="*{businesslicense}" type="hidden"/>
                     <input th:field="*{credentials}" type="hidden"/>
+                    <input th:field="*{headPortrait}" type="hidden"/>
                     <button lay-submit lay-filter="submitFrom" style="display: none;">提交</button>
                 </form>
             </div>
