--- a/src/main/resources/templates/banner/list.html
+++ b/src/main/resources/templates/banner/list.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head th:replace="common::headr('banner列表')"></head>
     <body>
-        <div class="layui-container">
+        <div class="layui-container" style="width: 100%">
             <div class="layui-row">
                 <div class="layui-col-xs12 layui-col-sm12 layui-col-md12">
                     <div class="layui-collapse">
