--- a/src/main/resources/templates/user/userList.html
+++ b/src/main/resources/templates/user/userList.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head th:replace="common::headr('用户列表')"></head>
     <body>
-        <div class="layui-container">
+        <div class="layui-container" style="width: 100%">
             <div class="layui-row">
-                <div class="layui-col-xs12 layui-col-sm12 layui-col-md12">
+                <div class="layui-col-md12">
                     <div class="layui-collapse">
                         <div class="layui-colla-item">
                             <h2 class="layui-colla-title">条件查询</h2>
